--- a/jogo-da-velha-api/index.html
+++ b/jogo-da-velha-api/index.html
@@ -62,7 +62,7 @@
                             <h2>Placar</h2>
                             <table class="table">
                                 <thead>
-                                    <tr style="table-dark">
+                                    <tr class="table-dark" >
                                         <td>X</td>
                                         <td>O</td>
                                         <td>V</td>
